--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "install": "./node_modules/.bin/bower install && ./node_modules/.bin/gulp"
   },
   "devDependencies": {
+    "babel-core": "^5.8.22",
+    "babel-loader": "^5.3.2",
     "bower": "^1.3.12",
     "css-loader": "^0.9.0",
     "del": "^0.1.3",
