--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "html-webpack-plugin": "^1.1.0",
     "json-loader": "^0.5.1",
     "lodash": "^2.4.1",
+    "ng-annotate-webpack-plugin": "^0.1.2",
     "open": "0.0.5",
     "sass-loader": "^0.2.0",
     "style-loader": "^0.8.1",
